# intel_coding_assignment

interview.task.cpp/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
interview.task.cpp/.devcontainer/: Dockerfile  devcontainer.json
interview.task.cpp/task/: CMakeLists.txt
interview.task.cpp/task/include/: data.hpp  serializer.hpp  tests.hpp  verifier.hpp
interview.task.cpp/task/source/: main.cpp  serializer.cpp  tests.cpp  verifier.cpp
interview.task.python/: README.md
interview.task.python/task/: main.py  rectangle.py
